modified:   package.json 	modified:   src/catalog/item/bottom.tsx 	modified:   src/catalog/item/center.tsx 	modified:   src/catalog/item/description.tsx 	new file:   src/catalog/item/descripton-price.tsx 	modified:   src/catalog/item/index.tsx 	modified:   src/catalog/item/top.tsx 	new file:   src/component/dialog.tsx 	modified:   src/component/input.tsx 	modified:   src/component/table.tsx 	modified:   src/header/breadcrumbs.tsx 	modified:   src/styles/table.css

--- a/src/styles/table.css
+++ b/src/styles/table.css
@@ -25,21 +25,33 @@
 	font-weight: bold;
 }
 
+/* при наведении */
 .price-table .highlight-row {
 	background-color: #e7f3fe;
 	/* Подсветка строки */
 }
-
 .price-table .highlight-col {
 	background-color: #e7f3fe;
 	/* Подсветка столбца */
 }
-
 .price-table .highlight-intersection {
 	background-color: #d1e7dd;
 	/* Подсветка пересечения */
 	font-weight: bold;
 }
+
+/* при клике */
+.selected-row {
+    background-color: #e7f3fe;
+}
+.selected-col {
+    background-color: #e7f3fe;
+}
+.selected-cell {
+    background-color: #9C2426;
+	color: white;
+}
+
 
 
 @media only screen and (max-width: 1100px) {
