modified:   .gitignore 	modified:   src/catalog/index.tsx 	modified:   src/catalog/item/atomize.tsx 	modified:   src/catalog/item/center.tsx 	modified:   src/catalog/item/descripton-price.tsx 	modified:   src/header/logo.tsx 	modified:   src/index.tsx 	modified:   src/shared/header.tsx 	modified:   src/styles/fonts/kinetika-regular.eot 	modified:   src/styles/fonts/kinetika-regular.svg 	modified:   src/styles/fonts/kinetika-regular.woff 	modified:   src/styles/fonts/kinetika-regular.woff2 	modified:   src/styles/index.css 	modified:   vite.config.js

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -24,16 +24,20 @@
 }
 
 
-/* шрифт Kinetika */
+/* ! шрифт Kinetika комерческий шрифт */
+/*
 @font-face {
-	font-family: 'Kinetika';
-	font-weight: 400;
+    font-family: 'Kinetika';
+    src: url('/fonts/Kinetika-Regular.eot');
+    src: url('/fonts/Kinetika-Regular.eot?#iefix') format('embedded-opentype'),
+        url('/fonts/Kinetika-Regular.woff2') format('woff2'),
+        url('/fonts/Kinetika-Regular.woff') format('woff'),
+        url('/fonts/Kinetika-Regular.svg#Kinetika-Regular') format('svg');
+    font-weight: normal;
     font-style: normal;
-	src: url('./fonts/kinetika-regular.woff') format('woff'), /* Firefox >= 3.6, any other modern browser */
-		url('./fonts/kinetika-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-		
+    font-display: swap;
 }
-
+*/
 
 
 body {
